// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SingleContributionsProcessorStack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "singlecontributionsprocessordlqurl": {
      "Value": {
        "Ref": "singlecontributionsprocessorqueueCF05834A",
      },
    },
    "singlecontributionsprocessorqueueurl": {
      "Value": {
        "Ref": "deadletterssinglecontributionsprocessorqueueC118704C",
      },
    },
  },
  "Resources": {
    "deadletterssinglecontributionsprocessorqueueC118704C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contributions-processor-queue-CODE",
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsprocessorqueueCF05834A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contributions-processor-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsprocessorqueueC118704C",
              "Arn",
            ],
          },
          "maxReceiveCount": 2,
        },
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`The SingleContributionsProcessorStack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "singlecontributionsprocessordlqurl": {
      "Value": {
        "Ref": "singlecontributionsprocessorqueueCF05834A",
      },
    },
    "singlecontributionsprocessorqueueurl": {
      "Value": {
        "Ref": "deadletterssinglecontributionsprocessorqueueC118704C",
      },
    },
  },
  "Resources": {
    "deadletterssinglecontributionsprocessorqueueC118704C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "dead-letters-single-contributions-processor-queue-PROD",
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "singlecontributionsprocessorqueueCF05834A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "single-contributions-processor-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadletterssinglecontributionsprocessorqueueC118704C",
              "Arn",
            ],
          },
          "maxReceiveCount": 2,
        },
        "SqsManagedSseEnabled": true,
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
